--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import "style/header.css";
 @import "style/slider_bottom_area.css";
 @import "style/column_wrapper.css";
+@import "style/about_us.css";
 
 
 *{
