--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 @import "style/slider_bottom_area.css";
 @import "style/column_wrapper.css";
 @import "style/about_us.css";
+@import "style/footer_top.css";
 
 
 *{
